[package]
name = "engine"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
contract = { path = "../contract" }
egui = "0.27.2"
egui-wgpu = { version = "0.27.2", features = ["winit"] }
env_logger = "0.11.5"
log = "0.4.22"
render = { path = "../render" }
service = { path = "../service" }
winit = "0.29.15"

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
egui-winit = "0.27.2"
pollster = "0.3.0"

[target.'cfg(target_arch = "wasm32")'.dependencies]
console_error_panic_hook = "0.1.7"
console_log = "1.0.0"
egui-winit = { version = "0.27.2", default-features = false }
wasm-bindgen = "0.2.93"
wasm-bindgen-futures = "0.4.43"
web-sys = { version = "0.3.70", features = [
    "Window",
    "Document",
    "HtmlElement",
    "Node",
    "Text",
] }
web-time = "1.1.0"

[features]
default = ["render/default"]
webgl = ["render/webgl"]
webgpu = ["render/webgpu"]
